refactor : config 수정